<resources>

    <!-- APP DEFAULT -->
    <string name="app_name">Food and Water Dispenser</string>

    <!-- OTHER -->
    <string name="indeterminate_mode">Indeterminate mode</string>
    <string name="show_on_github">Show on GitHub</string>
    <string name="pay_me_a_beer">Pay me a beer</string>
    <string name="offer_me_a_beer">Offer me a beer if that application have helped you to reward me.</string>
    <string name="lblFoodDispensed">Dispensed Food</string>
    <string name="lblFoodConsumed">Consumed Food</string>
    <string name="lblWaterDispensed">Dispensed Water</string>
    <string name="lblWaterConsumed">Consumed Water</string>
    <string name="valWater" translatable="false">0 / 0 ml</string>
    <string name="valFood" translatable="false">0 / 0 g</string>
    <string name="action_parameters">Setting</string>
    <string name="hint_food">Food amount</string>
    <string name="hint_water">Water amount</string>
    <string name="hint_bowl">Bowl amount</string>
    <string name="lblFoodBowlConfig">Daily amount of food (g)</string>
    <string name="lblWaterBowlConfig">Daily amount of water (ml)</string>
    <string name="lblBowlConfig">Bowl capacity</string>
    <string name="unitWater" translatable="false">ml</string>
    <string name="unitFood" translatable="false">g</string>
    <string name="lblScreenConfig">Configuration of parameters</string>
    <string name="action_save">Save</string>
    <string name="msn_save_data">Successfully saved data</string>
    <string name="error_save_data">Error saving data</string>
</resources>