<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="40dp"
    tools:context=".ParametersConfigurationActivity"
    android:background="@color/configContent">

    <TextView
        android:id="@+id/lblScreenConfig"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:text="@string/lblScreenConfig"
        android:textAlignment="center"
        android:textColor="@color/primary"
        android:textSize="18sp"
        android:textStyle="bold" />

    <!--<ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">-->

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="50dp"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <TextView
                android:id="@+id/lblFoodAmountConfig"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:text="@string/lblFoodBowlConfig"
                android:textAlignment="center"
                android:textColor="@color/food"
                android:textSize="16sp"
                android:textStyle="bold"
                android:visibility="gone" />

            <LinearLayout
                android:id="@+id/_area_food"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/lblFoodAmountConfig"
                android:layout_alignParentTop="false"
                android:layout_marginBottom="40dp"
                android:layout_marginLeft="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/_img_food"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:adjustViewBounds="false"
                    android:contentDescription="Usuario"
                    android:cropToPadding="false"
                    android:src="@drawable/bowlfood" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/_til_food"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="15dp"
                    app:hintTextAppearance="@style/food_appearance">

                    <EditText
                        android:id="@+id/_field_food"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:ems="10"
                        android:hint="@string/lblFoodBowlConfig"
                        android:inputType="number"
                        android:maxLines="1"
                        android:textSize="18sp" />

                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/lblWaterAmountConfig"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/_area_food"
                android:text="@string/lblWaterBowlConfig"
                android:textAlignment="center"
                android:textColor="@color/water"
                android:textSize="16sp"
                android:textStyle="bold"
                android:visibility="gone" />

            <LinearLayout
                android:id="@+id/_area_water"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_below="@+id/lblWaterAmountConfig"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="25dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/_img_water"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:adjustViewBounds="false"
                    android:contentDescription="Usuario"
                    android:cropToPadding="false"
                    android:src="@drawable/bowlwater" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/_til_water"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="15dp"
                    app:hintTextAppearance="@style/water_appearance">

                    <EditText
                        android:id="@+id/_field_water"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:ems="10"
                        android:hint="@string/lblWaterBowlConfig"
                        android:inputType="number"
                        android:maxLines="1"
                        android:textSize="18sp" />

                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/lblBowlAmountConfig"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/_area_water"
                android:text="@string/lblBowlConfig"
                android:textAlignment="center"
                android:textColor="@color/primary_dark"
                android:textSize="16sp"
                android:textStyle="bold"
                android:visibility="gone" />

            <LinearLayout
                android:id="@+id/_area_bowl"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_below="@+id/lblBowlAmountConfig"
                android:layout_marginLeft="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/_img_bowl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:adjustViewBounds="false"
                    android:cropToPadding="false"
                    android:src="@drawable/bowlboth" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/_til_bowl"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="15dp"
                    app:hintTextAppearance="@style/bowl_appearance">

                    <EditText
                        android:id="@+id/_field_bowl"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:ems="10"
                        android:hint="@string/lblBowlConfig"
                        android:inputType="number"
                        android:maxLines="1"
                        android:textSize="18sp" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <!-- Bottom Bar -->
            <LinearLayout
                android:id="@+id/bottom_bar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:layout_below="@id/_area_bowl"
                android:layout_alignParentBottom="true"
                android:gravity="center_vertical|center_horizontal"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/_btnSave"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/btn_bg"
                    android:backgroundTint="@color/primary_dark"
                    android:fontFamily="sans-serif-medium"
                    android:paddingLeft="70dp"
                    android:paddingRight="70dp"
                    android:text="@string/action_save"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>

        </RelativeLayout>
   <!--</ScrollView>-->
</android.support.design.widget.CoordinatorLayout>